# conway-game-of-life

./: CMakeCache.txt  CMakeLists.txt  Makefile  app  cmake_install.cmake  main.cpp
data/: board.brd
include/: util.hpp
src/: util.cpp
test/: test.cpp
